--- a/build.gradle
+++ b/build.gradle
@@ -38,8 +38,10 @@ subprojects {
 	dependencies {
 		compileOnly 'org.projectlombok:lombok'
 		annotationProcessor 'org.projectlombok:lombok'
+		runtimeOnly 'com.h2database:h2'
 
 		implementation 'org.springframework.boot:spring-boot-starter'
+
 		testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	}
 
