--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "ittory-domain/src/main/resources"]
-	path = ittory-domain/src/main/resources
+[submodule "env"]
+	path = env
 	url = https://github.com/ittory-project/ittory-server-env.git
