--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,13 @@ subprojects {
 		testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	}
 
+	tasks.withType(ProcessResources) {
+		from(rootProject.file('env')) {
+			include '.env'
+			into 'env'
+		}
+	}
+
 	test {
 		useJUnitPlatform()
 	}
