--- a/ittory-api/build.gradle
+++ b/ittory-api/build.gradle
@@ -18,6 +18,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-security'
 
     implementation project(':ittory-domain')
+    implementation project(':ittory-common')
     implementation project(':ittory-infra')
 
     testImplementation 'org.springframework.security:spring-security-test'
