--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,7 @@ subprojects {
         runtimeOnly 'com.h2database:h2'
 
         implementation 'org.springframework.boot:spring-boot-starter'
+        implementation 'org.springframework.boot:spring-boot-starter-validation:3.0.4'
 
         testImplementation 'org.springframework.boot:spring-boot-starter-test'
     }
