RL1M-51 feat : 카카오 로그인 구현
- 카카오 인가 코드를 통해 카카오 로그인 기능 구현.
- 기존 회원이라면 JWT 토큰만 발급.
- 신규 회원이라면 DB에 저장 후 JWT 토큰 발급.

--- a/ittory-infra/src/main/resources/infra.yml
+++ b/ittory-infra/src/main/resources/infra.yml
@@ -13,6 +13,11 @@ aws:
     bucketName: ${S3_BUCKET_NAME}
     baseUrl: ${S3_BASE_URL}
 
+kakao:
+  clientId: ${KAKAO_CLIENT_ID}
+  redirectUri: ${KAKAO_REDIRECT_URI}
+  clientSecret: ${KAKAO_CLIENT_SECRET}
+
 ---
 spring:
   config:
