--- a/ittory-domain/src/main/resources/domain.yml
+++ b/ittory-domain/src/main/resources/domain.yml
@@ -24,11 +24,10 @@ spring:
   h2:
     console:
       enabled: true
-      path: /ittoryh2
 
   datasource:
     driver-class-name: org.h2.Driver
-    url: jdbc:h2:~/ittory/ittoryh2;Auto_SERVER=TRUE
+    url: jdbc:h2:mem:ittroy
     username: sa
     password:
 
