--- a/ittory-domain/build.gradle
+++ b/ittory-domain/build.gradle
@@ -2,4 +2,6 @@ dependencies {
     api 'org.springframework.boot:spring-boot-starter-data-jpa'
 
     runtimeOnly 'com.mysql:mysql-connector-j'
+
+    implementation project(':ittory-common')
 }
