RL1M-51 feat : ittory-api 모듈 빌드 시 ittory-infra 모듈 테스트 추가
- ittory-api 모듈 빌드 시 ittory-infra 모듈 테스트 검증 추가.

--- a/ittory-api/build.gradle
+++ b/ittory-api/build.gradle
@@ -27,5 +27,5 @@ dependencies {
 }
 
 tasks.named('test') {
-    dependsOn ':ittory-domain:test', ':ittory-common:test'
+    dependsOn ':ittory-domain:test', ':ittory-common:test', ':ittory-infra:test'
 }
