RL1M-90 feat : WebSocket 설정
- Connection EndPoint : /connection
- Destination Prefix : /ws
- Sub Prefix : /topic

--- a/ittory-socket/build.gradle
+++ b/ittory-socket/build.gradle
@@ -6,4 +6,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-websocket'
 
     implementation project(':ittory-domain')
+    implementation project(':ittory-common')
+}
+
+tasks.named('test') {
+    dependsOn ':ittory-domain:test', ':ittory-common:test'
 }
