--- a/ittory-api/build.gradle
+++ b/ittory-api/build.gradle
@@ -17,6 +17,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
+    implementation 'com.google.code.findbugs:jsr305:3.0.2'
 
     implementation project(':ittory-domain')
     implementation project(':ittory-common')
