feat : 회원가입, 탈퇴 시 Discord WebHook 발생
- 사용자 회원가입 시, Discord WebHook 발생.
- 사용자 탈퇴 시, Discord WebHook 발생.

--- a/ittory-infra/src/main/resources/infra.yml
+++ b/ittory-infra/src/main/resources/infra.yml
@@ -35,3 +35,7 @@ spring:
   config:
     activate:
       on-profile: prod
+discord:
+  webhook:
+    signup: ${SIGNUP_DISCORD_WEBHOOK_URL}
+    withdraw: ${WITHDRAW_DISCORD_WEBHOOK_URL}
