fix : Test Code 수정.

--- a/ittory-infra/src/main/resources/infra.yml
+++ b/ittory-infra/src/main/resources/infra.yml
@@ -18,6 +18,12 @@ kakao:
   redirectUri: ${KAKAO_REDIRECT_URI}
   clientSecret: ${KAKAO_CLIENT_SECRET}
 
+discord:
+  webhook:
+    signup: null
+    withdraw: null
+    daily-report: null
+
 ---
 spring:
   config:
