RL1M-229 feat : Swagger 보안설정 추가
- prod 환경에서 Swagger 삭제.
- dev 환경에서 Swagger 문서 비밀번호 추가.

--- a/ittory-api/src/main/resources/application.yml
+++ b/ittory-api/src/main/resources/application.yml
@@ -13,6 +13,11 @@ spring:
     user:
       name: user
       password: 1234
+
+swagger:
+  user: ${SWAGGER_USER}
+  password: ${SWAGGER_PASSWORD}
+
 ---
 spring:
   config:
@@ -30,4 +35,10 @@ spring:
   config:
     activate:
       on-profile: prod
+
+springdoc:
+  api-docs:
+    enabled: false
+  swagger-ui:
+    enabled: false
 
