--- a/ittory-api/src/main/resources/application.yml
+++ b/ittory-api/src/main/resources/application.yml
@@ -14,6 +14,10 @@ spring:
       name: user
       password: 1234
 
+  jwt:
+    token:
+      refresh-expiration-time: ${JWT_REFRESH_EXPIRATION_TIME}
+
 swagger:
   user: ${SWAGGER_USER}
   password: ${SWAGGER_PASSWORD}
