--- a/ittory-infra/src/main/resources/infra.yml
+++ b/ittory-infra/src/main/resources/infra.yml
@@ -20,16 +20,16 @@ discord:
     daily-report: null
     nplusone-occurrence: null
 
+kakao:
+  clientId: ${KAKAO_CLIENT_ID}
+  redirectUri: ${KAKAO_REDIRECT_URI}
+  clientSecret: ${KAKAO_CLIENT_SECRET}
+
 ---
 spring:
   config:
     activate:
       on-profile: local
-
-kakao:
-  clientId: ${KAKAO_CLIENT_ID}
-  redirectUri: ${KAKAO_LOCAL_REDIRECT_URI}
-  clientSecret: ${KAKAO_CLIENT_SECRET}
 
 ---
 spring:
@@ -37,21 +37,11 @@ spring:
     activate:
       on-profile: dev
 
-kakao:
-  clientId: ${KAKAO_CLIENT_ID}
-  redirectUri: ${KAKAO_DEV_REDIRECT_URI}
-  clientSecret: ${KAKAO_CLIENT_SECRET}
-
 ---
 spring:
   config:
     activate:
       on-profile: prod
-
-kakao:
-  clientId: ${KAKAO_CLIENT_ID}
-  redirectUri: ${KAKAO_PROD_REDIRECT_URI}
-  clientSecret: ${KAKAO_CLIENT_SECRET}
 
 discord:
   webhook:
