RL1M-267 feat : socket 모듈 수정
- WebSocketExceptionAdvice 캐치 시 디스코드 웹훅 발생.

--- a/ittory-socket/build.gradle
+++ b/ittory-socket/build.gradle
@@ -7,8 +7,9 @@ dependencies {
 
     implementation project(':ittory-domain')
     implementation project(':ittory-common')
+    implementation project(':ittory-infra')
 }
 
 tasks.named('test') {
-    dependsOn ':ittory-domain:test', ':ittory-common:test'
+    dependsOn ':ittory-domain:test', ':ittory-common:test', ':ittory-infra:test'
 }
