--- a/ittory-domain/src/main/resources/domain.yml
+++ b/ittory-domain/src/main/resources/domain.yml
@@ -41,8 +41,6 @@ spring:
     properties:
       hibernate:
         format_sql: true
-        show_sql: true
-        use_sql_comments: true
 
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -52,6 +50,8 @@ spring:
 
 logging:
   level:
+    org.hibernate.SQL: DEBUG
+    org.hibernate.type.descriptor.sql.BasicBinder: TRACE
     org.springframework.jdbc.core.JdbcTemplate: DEBUG
     org.springframework.jdbc.core.StatementCreatorUtils: TRACE
 
